# feat_engine

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
docs/: requirements.txt
docs/source/: cluster_data.rst  (+18 more)
feat_engine/: __init__.py  cluster_data.py  dimensionality_reduction.py  encode_category.py  encoding_categorical.py  feature_grouping.py  feature_interaction.py  feature_transformation.py  group_features.py  handle_missing_values.py  handle_outliers.py  handling_missing_values.py  handling_outliers.py  interact_features.py  normalize_scaling.py  operate_dataframe.py  reduce_dimension.py  scaling_normalization.py  select_features.py  solve_classification.py  solve_regression.py  target_based_features.py  temporal_features.py  transform_features.py  visualize_data.py  wrapper.py
tests/: test_cluster_data.py  test_dimensionality_reduction.py  test_encode_category.py  test_encoding_categorical.py  test_feature_grouping.py  test_feature_interaction.py  test_feature_transformation.py  test_group_features.py  test_handle_missing_values.py  test_handle_outliers.py  test_handling_missing_values.py  test_handling_outliers.py  test_interact_features.py  test_normalize_scaling.py  test_operate_dataframe.py  test_reduce_dimension.py  test_scaling_normalization.py  test_select_features.py  test_solve_classification.py  test_solve_regression.py  test_target_based_features.py  test_temporal_features.py  test_transform_features.py  test_visualize_data.py
(+1 files in other folders)
