[tool.poetry]
name = "feat-engine"
version = "0.1.0"
description = ""
authors = ["Ryota Kobayashi <s.woods.m.29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
setuptools = "^74.1.2"
scikit-learn = "^1.5.1"
pytest = "^8.3.2"
category-encoders = "^2.6.3"
umap = "^0.1.1"
tensorflow = "~2.17"
tensorflow-io-gcs-filesystem = "0.31.0"
pandas = "^2.2.2"
umap-learn = "^0.5.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
